force-app/main/default/objects/SiebelRds__x/fields/X_MATRICOLA_COMUNICARE__c.field-meta.xml
<CustomField>
    <fullName>X_MATRICOLA_COMUNICARE__c</fullName>
    <description>X_MATRICOLA_COMUNICARE</description>
    <externalDeveloperName>X_MATRICOLA_COMUNICARE</externalDeveloperName>
    <label>Matricola</label>
    <length>18</length>
    <type>Text</type>
</CustomField>