force-app/main/default/objects/SiebelRds__x/fields/X_MATRICOLA_LETT_10__c.field-meta.xml
<CustomField>
    <fullName>X_MATRICOLA_LETT_10__c</fullName>
    <description>X_MATRICOLA_LETT_10</description>
    <externalDeveloperName>X_MATRICOLA_LETT_10</externalDeveloperName>
    <label>Matricola lettura 10</label>
    <length>18</length>
    <type>Text</type>
</CustomField>