force-app/main/default/objects/SiebelRds__x/fields/X_MATRICOLA_LETT_11__c.field-meta.xml
<CustomField>
    <fullName>X_MATRICOLA_LETT_11__c</fullName>
    <description>X_MATRICOLA_LETT_11</description>
    <externalDeveloperName>X_MATRICOLA_LETT_11</externalDeveloperName>
    <label>Matricola lettura 11</label>
    <length>18</length>
    <type>Text</type>
</CustomField>