force-app/main/default/objects/SiebelRds__x/fields/X_MATRICOLA_LETT_1__c.field-meta.xml
<CustomField>
    <fullName>X_MATRICOLA_LETT_1__c</fullName>
    <description>X_MATRICOLA_LETT_1</description>
    <externalDeveloperName>X_MATRICOLA_LETT_1</externalDeveloperName>
    <label>Matricola lettura 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>