force-app/main/default/objects/SiebelRds__x/fields/X_MERCATO_COD__c.field-meta.xml
<CustomField>
    <fullName>X_MERCATO_COD__c</fullName>
    <description>X_MERCATO_COD</description>
    <externalDeveloperName>X_MERCATO_COD</externalDeveloperName>
    <label>Codice Mercato</label>
    <length>1</length>
    <type>Text</type>
</CustomField>