force-app/main/default/objects/SiebelRds__x/fields/X_MESE_COMPETENZA__c.field-meta.xml
<CustomField>
    <fullName>X_MESE_COMPETENZA__c</fullName>
    <description>X_MESE_COMPETENZA</description>
    <externalDeveloperName>X_MESE_COMPETENZA</externalDeveloperName>
    <label>Mese Competenza</label>
    <length>20</length>
    <type>Text</type>
</CustomField>