force-app/main/default/objects/SiebelRds__x/fields/X_MOD_FATTURA__c.field-meta.xml
<CustomField>
    <fullName>X_MOD_FATTURA__c</fullName>
    <description>X_MOD_FATTURA</description>
    <externalDeveloperName>X_MOD_FATTURA</externalDeveloperName>
    <label>X_MOD_FATTURA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>