force-app/main/default/objects/SiebelRds__x/fields/X_MOD_INVIO_PAPER__c.field-meta.xml
<CustomField>
    <fullName>X_MOD_INVIO_PAPER__c</fullName>
    <description>X_MOD_INVIO_PAPER</description>
    <externalDeveloperName>X_MOD_INVIO_PAPER</externalDeveloperName>
    <label>Modalita Invio Codice Paperless</label>
    <length>160</length>
    <type>Text</type>
</CustomField>