force-app/main/default/objects/SiebelRds__x/fields/X_NOME_FILE__c.field-meta.xml
<CustomField>
    <fullName>X_NOME_FILE__c</fullName>
    <description>X_NOME_FILE</description>
    <externalDeveloperName>X_NOME_FILE</externalDeveloperName>
    <label>Nome File</label>
    <length>1999</length>
    <type>LongTextArea</type>
</CustomField>