force-app/main/default/objects/SiebelRds__x/fields/X_NOTE__c.field-meta.xml
<CustomField>
    <fullName>X_NOTE__c</fullName>
    <description>X_NOTE</description>
    <externalDeveloperName>X_NOTE</externalDeveloperName>
    <label>Note 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>