force-app/main/default/objects/SiebelRds__x/fields/X_NUM_COM_ANN__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_COM_ANN__c</fullName>
    <description>X_NUM_COM_ANN</description>
    <externalDeveloperName>X_NUM_COM_ANN</externalDeveloperName>
    <label>Numero Comunicazione ANN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>