force-app/main/default/objects/SiebelRds__x/fields/X_NUM_COM_SDD__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_COM_SDD__c</fullName>
    <description>X_NUM_COM_SDD</description>
    <externalDeveloperName>X_NUM_COM_SDD</externalDeveloperName>
    <label>Numero Comunicazione SDD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>