force-app/main/default/objects/SiebelRds__x/fields/X_NUM_OCCUPANTI__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_OCCUPANTI__c</fullName>
    <description>X_NUM_OCCUPANTI</description>
    <externalDeveloperName>X_NUM_OCCUPANTI</externalDeveloperName>
    <label>Numero Occupanti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>