force-app/main/default/objects/SiebelRds__x/fields/X_NUM_TENTATIVI__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_TENTATIVI__c</fullName>
    <description>X_NUM_TENTATIVI</description>
    <externalDeveloperName>X_NUM_TENTATIVI</externalDeveloperName>
    <label>Numero Tentativi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>