force-app/main/default/objects/SiebelRds__x/fields/X_PEC_SOLLECITO_ATT__c.field-meta.xml
<CustomField>
    <fullName>X_PEC_SOLLECITO_ATT__c</fullName>
    <description>X_PEC_SOLLECITO_ATT</description>
    <externalDeveloperName>X_PEC_SOLLECITO_ATT</externalDeveloperName>
    <label>Attuale PEC per sollecito</label>
    <length>241</length>
    <type>Text</type>
</CustomField>