force-app/main/default/objects/SiebelRds__x/fields/X_PIVA_PREC_INTEST__c.field-meta.xml
<CustomField>
    <fullName>X_PIVA_PREC_INTEST__c</fullName>
    <description>X_PIVA_PREC_INTEST</description>
    <externalDeveloperName>X_PIVA_PREC_INTEST</externalDeveloperName>
    <label>Partita IVA precedente Intestatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>