force-app/main/default/objects/SiebelRds__x/fields/X_POD_PDR_DA_COMU__c.field-meta.xml
<CustomField>
    <fullName>X_POD_PDR_DA_COMU__c</fullName>
    <description>X_POD_PDR_DA_COMU</description>
    <externalDeveloperName>X_POD_PDR_DA_COMU</externalDeveloperName>
    <label>POD/PDR da Comunicare</label>
    <length>50</length>
    <type>Text</type>
</CustomField>