force-app/main/default/objects/SiebelRds__x/fields/X_PROPOSED_DATE__c.field-meta.xml
<CustomField>
    <fullName>X_PROPOSED_DATE__c</fullName>
    <description>X_PROPOSED_DATE</description>
    <externalDeveloperName>X_PROPOSED_DATE</externalDeveloperName>
    <label>Data Proposta</label>
    <type>DateTime</type>
</CustomField>