force-app/main/default/objects/SiebelRds__x/fields/X_PROVENIENZA__c.field-meta.xml
<CustomField>
    <fullName>X_PROVENIENZA__c</fullName>
    <description>X_PROVENIENZA</description>
    <externalDeveloperName>X_PROVENIENZA</externalDeveloperName>
    <label>Provenienza</label>
    <length>30</length>
    <type>Text</type>
</CustomField>