force-app/main/default/objects/SiebelRds__x/fields/X_REG_CORRETTORE__c.field-meta.xml
<CustomField>
    <fullName>X_REG_CORRETTORE__c</fullName>
    <description>X_REG_CORRETTORE</description>
    <externalDeveloperName>X_REG_CORRETTORE</externalDeveloperName>
    <label>Registro Correttore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>