force-app/main/default/objects/SiebelRds__x/fields/X_REGION__c.field-meta.xml
<CustomField>
    <fullName>X_REGION__c</fullName>
    <description>X_REGION</description>
    <externalDeveloperName>X_REGION</externalDeveloperName>
    <label>Regione</label>
    <length>4</length>
    <type>Text</type>
</CustomField>