force-app/main/default/objects/SiebelRds__x/fields/X_REGISTRO_LETT_12__c.field-meta.xml
<CustomField>
    <fullName>X_REGISTRO_LETT_12__c</fullName>
    <description>X_REGISTRO_LETT_12</description>
    <externalDeveloperName>X_REGISTRO_LETT_12</externalDeveloperName>
    <label>Registro lettura 12</label>
    <length>3</length>
    <type>Text</type>
</CustomField>