force-app/main/default/objects/SiebelRds__x/fields/X_REGISTRO_LETT_2__c.field-meta.xml
<CustomField>
    <fullName>X_REGISTRO_LETT_2__c</fullName>
    <description>X_REGISTRO_LETT_2</description>
    <externalDeveloperName>X_REGISTRO_LETT_2</externalDeveloperName>
    <label>Registro lettura 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>