force-app/main/default/objects/SiebelRds__x/fields/X_REGISTRO_LETT_7__c.field-meta.xml
<CustomField>
    <fullName>X_REGISTRO_LETT_7__c</fullName>
    <description>X_REGISTRO_LETT_7</description>
    <externalDeveloperName>X_REGISTRO_LETT_7</externalDeveloperName>
    <label>Registro lettura 7</label>
    <length>3</length>
    <type>Text</type>
</CustomField>