force-app/main/default/objects/SiebelRds__x/fields/X_RELATED_RDS__c.field-meta.xml
<CustomField>
    <fullName>X_RELATED_RDS__c</fullName>
    <description>X_RELATED_RDS</description>
    <externalDeveloperName>X_RELATED_RDS</externalDeveloperName>
    <label>RDS correlato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>