force-app/main/default/objects/SiebelRds__x/fields/X_RICH_DATI_TEC__c.field-meta.xml
<CustomField>
    <fullName>X_RICH_DATI_TEC__c</fullName>
    <description>X_RICH_DATI_TEC</description>
    <externalDeveloperName>X_RICH_DATI_TEC</externalDeveloperName>
    <label>Richiesta Dati Tecnici</label>
    <length>2</length>
    <type>Text</type>
</CustomField>