force-app/main/default/objects/SiebelRds__x/fields/X_SEGNALAZIONE_CLI__c.field-meta.xml
<CustomField>
    <fullName>X_SEGNALAZIONE_CLI__c</fullName>
    <description>X_SEGNALAZIONE_CLI</description>
    <externalDeveloperName>X_SEGNALAZIONE_CLI</externalDeveloperName>
    <label>Segnalazione CLiente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>