force-app/main/default/objects/SiebelRds__x/fields/X_SERVICE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>X_SERVICE_TYPE__c</fullName>
    <description>X_SERVICE_TYPE</description>
    <externalDeveloperName>X_SERVICE_TYPE</externalDeveloperName>
    <label>Tipo Servizio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>