force-app/main/default/objects/SiebelRds__x/fields/X_SFA_FLG__c.field-meta.xml
<CustomField>
    <fullName>X_SFA_FLG__c</fullName>
    <description>X_SFA_FLG</description>
    <externalDeveloperName>X_SFA_FLG</externalDeveloperName>
    <label>Flag SFA</label>
    <length>1</length>
    <type>Text</type>
</CustomField>