force-app/main/default/objects/SiebelRds__x/fields/X_SOC_VEND_BRAND__c.field-meta.xml
<CustomField>
    <fullName>X_SOC_VEND_BRAND__c</fullName>
    <description>X_SOC_VEND_BRAND</description>
    <externalDeveloperName>X_SOC_VEND_BRAND</externalDeveloperName>
    <label>Brand PIVA Soc. vendita</label>
    <length>30</length>
    <type>Text</type>
</CustomField>