force-app/main/default/objects/SiebelRds__x/fields/X_SOCVEND_READ_ONLY__c.field-meta.xml
<CustomField>
    <fullName>X_SOCVEND_READ_ONLY__c</fullName>
    <description>X_SOCVEND_READ_ONLY</description>
    <externalDeveloperName>X_SOCVEND_READ_ONLY</externalDeveloperName>
    <label>Società di Vendita sola lettura</label>
    <length>1</length>
    <type>Text</type>
</CustomField>