force-app/main/default/objects/SiebelRds__x/fields/X_SR_APP_DA_ANNULLARE__c.field-meta.xml
<CustomField>
    <fullName>X_SR_APP_DA_ANNULLARE__c</fullName>
    <description>X_SR_APP_DA_ANNULLARE</description>
    <externalDeveloperName>X_SR_APP_DA_ANNULLARE</externalDeveloperName>
    <label>SR APP da Annullare</label>
    <length>30</length>
    <type>Text</type>
</CustomField>