force-app/main/default/objects/SiebelRds__x/fields/X_SR_NUM_ID_RDO__c.field-meta.xml
<CustomField>
    <fullName>X_SR_NUM_ID_RDO__c</fullName>
    <description>X_SR_NUM_ID_RDO</description>
    <externalDeveloperName>X_SR_NUM_ID_RDO</externalDeveloperName>
    <label>Numero Rds Id Rdo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>