force-app/main/default/objects/SiebelRds__x/fields/X_TAG_2__c.field-meta.xml
<CustomField>
    <fullName>X_TAG_2__c</fullName>
    <description>X_TAG_2</description>
    <externalDeveloperName>X_TAG_2</externalDeveloperName>
    <label>Tag 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>