force-app/main/default/objects/SiebelRds__x/fields/X_TAG_3__c.field-meta.xml
<CustomField>
    <fullName>X_TAG_3__c</fullName>
    <description>X_TAG_3</description>
    <externalDeveloperName>X_TAG_3</externalDeveloperName>
    <label>Tag 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>