force-app/main/default/objects/SiebelRds__x/fields/X_TAG_4__c.field-meta.xml
<CustomField>
    <fullName>X_TAG_4__c</fullName>
    <description>X_TAG_4</description>
    <externalDeveloperName>X_TAG_4</externalDeveloperName>
    <label>Tag 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>