force-app/main/default/objects/SiebelRds__x/fields/X_TARIFFA__c.field-meta.xml
<CustomField>
    <fullName>X_TARIFFA__c</fullName>
    <description>X_TARIFFA</description>
    <externalDeveloperName>X_TARIFFA</externalDeveloperName>
    <label>Taroffa</label>
    <length>30</length>
    <type>Text</type>
</CustomField>