force-app/main/default/objects/SiebelRds__x/fields/X_TCP_RDS_RDO__c.field-meta.xml
<CustomField>
    <fullName>X_TCP_RDS_RDO__c</fullName>
    <description>X_TCP_RDS_RDO</description>
    <externalDeveloperName>X_TCP_RDS_RDO</externalDeveloperName>
    <label>TCP RDS/RDO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>