force-app/main/default/objects/SiebelRds__x/fields/X_TEL_BENEF__c.field-meta.xml
<CustomField>
    <fullName>X_TEL_BENEF__c</fullName>
    <description>X_TEL_BENEF</description>
    <externalDeveloperName>X_TEL_BENEF</externalDeveloperName>
    <label>Telefono Beneficiario</label>
    <length>20</length>
    <type>Text</type>
</CustomField>