force-app/main/default/objects/SiebelRds__x/fields/X_TEL_CELL_PREAVV_PERS_PESSE__c.field-meta.xml
<CustomField>
    <fullName>X_TEL_CELL_PREAVV_PERS_PESSE__c</fullName>
    <description>X_TEL_CELL_PREAVV_PERS_PESSE</description>
    <externalDeveloperName>X_TEL_CELL_PREAVV_PERS_PESSE</externalDeveloperName>
    <label>Tel. cell preavviso personalizzato PESSE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>