force-app/main/default/objects/SiebelRds__x/fields/X_TIMBRO_BATCH__c.field-meta.xml
<CustomField>
    <fullName>X_TIMBRO_BATCH__c</fullName>
    <description>X_TIMBRO_BATCH</description>
    <externalDeveloperName>X_TIMBRO_BATCH</externalDeveloperName>
    <label>Timbro batch</label>
    <length>1</length>
    <type>Text</type>
</CustomField>