force-app/main/default/objects/SiebelRds__x/fields/X_TIPO_DOCUMENTO__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_DOCUMENTO__c</fullName>
    <description>X_TIPO_DOCUMENTO</description>
    <externalDeveloperName>X_TIPO_DOCUMENTO</externalDeveloperName>
    <label>Tipo documento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>