force-app/main/default/objects/SiebelRds__x/fields/X_TIPO_RDS_ANNULLAMENTO__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_RDS_ANNULLAMENTO__c</fullName>
    <description>X_TIPO_RDS_ANNULLAMENTO</description>
    <externalDeveloperName>X_TIPO_RDS_ANNULLAMENTO</externalDeveloperName>
    <label>Tipo RDS annullamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>