force-app/main/default/objects/SiebelRds__x/fields/X_TIPO_SERVIZIO__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_SERVIZIO__c</fullName>
    <description>X_TIPO_SERVIZIO</description>
    <externalDeveloperName>X_TIPO_SERVIZIO</externalDeveloperName>
    <label>Tipo Servizio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>