force-app/main/default/objects/SiebelRds__x/fields/X_TIPOLOGIA_LETT_11__c.field-meta.xml
<CustomField>
    <fullName>X_TIPOLOGIA_LETT_11__c</fullName>
    <description>X_TIPOLOGIA_LETT_11</description>
    <externalDeveloperName>X_TIPOLOGIA_LETT_11</externalDeveloperName>
    <label>Tipologia lettura 11</label>
    <length>24</length>
    <type>Text</type>
</CustomField>