force-app/main/default/objects/SiebelRds__x/fields/X_TIPOLOGIA_LETT_1__c.field-meta.xml
<CustomField>
    <fullName>X_TIPOLOGIA_LETT_1__c</fullName>
    <description>X_TIPOLOGIA_LETT_1</description>
    <externalDeveloperName>X_TIPOLOGIA_LETT_1</externalDeveloperName>
    <label>Tipologia lettura 1</label>
    <length>24</length>
    <type>Text</type>
</CustomField>