force-app/main/default/objects/SiebelRds__x/fields/X_TIPOLOGIA_LETT_4__c.field-meta.xml
<CustomField>
    <fullName>X_TIPOLOGIA_LETT_4__c</fullName>
    <description>X_TIPOLOGIA_LETT_4</description>
    <externalDeveloperName>X_TIPOLOGIA_LETT_4</externalDeveloperName>
    <label>Tipologia lettura 4</label>
    <length>24</length>
    <type>Text</type>
</CustomField>