force-app/main/default/objects/SiebelRds__x/fields/X_TIPOLOGIA_LETT__c.field-meta.xml
<CustomField>
    <fullName>X_TIPOLOGIA_LETT__c</fullName>
    <description>X_TIPOLOGIA_LETT</description>
    <externalDeveloperName>X_TIPOLOGIA_LETT</externalDeveloperName>
    <label>Tipologia lettura</label>
    <length>24</length>
    <type>Text</type>
</CustomField>