force-app/main/default/objects/SiebelRds__x/fields/X_TO_EXTRACT__c.field-meta.xml
<CustomField>
    <fullName>X_TO_EXTRACT__c</fullName>
    <description>X_TO_EXTRACT</description>
    <externalDeveloperName>X_TO_EXTRACT</externalDeveloperName>
    <label>Da estrarre</label>
    <length>1</length>
    <type>Text</type>
</CustomField>