force-app/main/default/objects/SiebelRds__x/fields/X_TO_EXTRACT_REITEK__c.field-meta.xml
<CustomField>
    <fullName>X_TO_EXTRACT_REITEK__c</fullName>
    <description>X_TO_EXTRACT_REITEK</description>
    <externalDeveloperName>X_TO_EXTRACT_REITEK</externalDeveloperName>
    <label>Da estrarre REITEK</label>
    <length>1</length>
    <type>Text</type>
</CustomField>