force-app/main/default/objects/SiebelRds__x/fields/X_TOT_DA_RATEIZZARE__c.field-meta.xml
<CustomField>
    <fullName>X_TOT_DA_RATEIZZARE__c</fullName>
    <description>X_TOT_DA_RATEIZZARE</description>
    <externalDeveloperName>X_TOT_DA_RATEIZZARE</externalDeveloperName>
    <label>Totale da rateizzare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>