force-app/main/default/objects/SiebelRds__x/fields/X_UNITA_MISURA_3__c.field-meta.xml
<CustomField>
    <fullName>X_UNITA_MISURA_3__c</fullName>
    <description>X_UNITA_MISURA_3</description>
    <externalDeveloperName>X_UNITA_MISURA_3</externalDeveloperName>
    <label>Unità di misura 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>