force-app/main/default/objects/SiebelRds__x/fields/X_UNITA_MISURA_5__c.field-meta.xml
<CustomField>
    <fullName>X_UNITA_MISURA_5__c</fullName>
    <description>X_UNITA_MISURA_5</description>
    <externalDeveloperName>X_UNITA_MISURA_5</externalDeveloperName>
    <label>Unità di misura 5</label>
    <length>3</length>
    <type>Text</type>
</CustomField>