force-app/main/default/objects/SiebelRds__x/fields/X_UNITA_MISURA_6__c.field-meta.xml
<CustomField>
    <fullName>X_UNITA_MISURA_6__c</fullName>
    <description>X_UNITA_MISURA_6</description>
    <externalDeveloperName>X_UNITA_MISURA_6</externalDeveloperName>
    <label>Unità di misura 6</label>
    <length>3</length>
    <type>Text</type>
</CustomField>