force-app/main/default/objects/SiebelRds__x/fields/X_URP_USER__c.field-meta.xml
<CustomField>
    <fullName>X_URP_USER__c</fullName>
    <description>X_URP_USER</description>
    <externalDeveloperName>X_URP_USER</externalDeveloperName>
    <label>URP utente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>