force-app/main/default/objects/SiebelRds__x/fields/X_VAS_CONTR_COD_OFF__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_CONTR_COD_OFF__c</fullName>
    <description>X_VAS_CONTR_COD_OFF</description>
    <externalDeveloperName>X_VAS_CONTR_COD_OFF</externalDeveloperName>
    <label>Codice contratto OFF VAS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>