force-app/main/default/objects/SiebelRds__x/fields/X_VAS_CONTRACT_IMPIANTO__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_CONTRACT_IMPIANTO__c</fullName>
    <description>X_VAS_CONTRACT_IMPIANTO</description>
    <externalDeveloperName>X_VAS_CONTRACT_IMPIANTO</externalDeveloperName>
    <label>Impianto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>