force-app/main/default/objects/SiebelRds__x/fields/X_VAS_CUSTOMER_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_CUSTOMER_ADDRESS__c</fullName>
    <description>X_VAS_CUSTOMER_ADDRESS</description>
    <externalDeveloperName>X_VAS_CUSTOMER_ADDRESS</externalDeveloperName>
    <label>Indirizzo cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>