force-app/main/default/objects/SiebelRds__x/fields/X_VAS_CUSTOMER_ADDRESS_BARRAT__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_CUSTOMER_ADDRESS_BARRAT__c</fullName>
    <description>X_VAS_CUSTOMER_ADDRESS_BARRAT</description>
    <externalDeveloperName>X_VAS_CUSTOMER_ADDRESS_BARRAT</externalDeveloperName>
    <label>indirizzo cliente barrato</label>
    <length>15</length>
    <type>Text</type>
</CustomField>