force-app/main/default/objects/SiebelRds__x/fields/X_VAS_CUSTOMER_ADDRESS_NAZION__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_CUSTOMER_ADDRESS_NAZION__c</fullName>
    <description>X_VAS_CUSTOMER_ADDRESS_NAZION</description>
    <externalDeveloperName>X_VAS_CUSTOMER_ADDRESS_NAZION</externalDeveloperName>
    <label>Nazione cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>