force-app/main/default/objects/SiebelRds__x/fields/X_VAS_DATA_DECORRENZA__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_DATA_DECORRENZA__c</fullName>
    <description>X_VAS_DATA_DECORRENZA</description>
    <externalDeveloperName>X_VAS_DATA_DECORRENZA</externalDeveloperName>
    <label>Data decorrenza VAS</label>
    <type>DateTime</type>
</CustomField>