force-app/main/default/objects/SiebelRds__x/fields/X_VAS_DURATA_SERVIZIO__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_DURATA_SERVIZIO__c</fullName>
    <description>X_VAS_DURATA_SERVIZIO</description>
    <externalDeveloperName>X_VAS_DURATA_SERVIZIO</externalDeveloperName>
    <label>Durata Servizio VAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>