force-app/main/default/objects/SiebelRds__x/fields/X_VAS_FLG_NO_KIT__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_FLG_NO_KIT__c</fullName>
    <description>X_VAS_FLG_NO_KIT</description>
    <externalDeveloperName>X_VAS_FLG_NO_KIT</externalDeveloperName>
    <label>Flag no KIT VAS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>