force-app/main/default/objects/SiebelRds__x/fields/X_VAS_IMPORTO_TOTALE__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_IMPORTO_TOTALE__c</fullName>
    <description>X_VAS_IMPORTO_TOTALE</description>
    <externalDeveloperName>X_VAS_IMPORTO_TOTALE</externalDeveloperName>
    <label>Importo totale VAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>