force-app/main/default/objects/SiebelRds__x/fields/X_VAS_IMPORTO_TOTALE_NO_IVA__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_IMPORTO_TOTALE_NO_IVA__c</fullName>
    <description>X_VAS_IMPORTO_TOTALE_NO_IVA</description>
    <externalDeveloperName>X_VAS_IMPORTO_TOTALE_NO_IVA</externalDeveloperName>
    <label>Importo totale no iva VAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>