force-app/main/default/objects/SiebelRds__x/fields/X_VAS_INDIRIZZO_GENERICO__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_INDIRIZZO_GENERICO__c</fullName>
    <description>X_VAS_INDIRIZZO_GENERICO</description>
    <externalDeveloperName>X_VAS_INDIRIZZO_GENERICO</externalDeveloperName>
    <label>Indirizzo generico VAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>