force-app/main/default/objects/SiebelRds__x/fields/X_VAS_INIZIO_RINNOVO__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_INIZIO_RINNOVO__c</fullName>
    <description>X_VAS_INIZIO_RINNOVO</description>
    <externalDeveloperName>X_VAS_INIZIO_RINNOVO</externalDeveloperName>
    <label>Inizio rinnovoVAS</label>
    <type>DateTime</type>
</CustomField>