force-app/main/default/objects/SiebelRds__x/fields/X_VAS_LI_INTEG_ID__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_LI_INTEG_ID__c</fullName>
    <description>X_VAS_LI_INTEG_ID</description>
    <externalDeveloperName>X_VAS_LI_INTEG_ID</externalDeveloperName>
    <label>VAS line item Integration Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>