force-app/main/default/objects/SiebelRds__x/fields/X_VAS_MAX_QTY__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_MAX_QTY__c</fullName>
    <description>X_VAS_MAX_QTY</description>
    <externalDeveloperName>X_VAS_MAX_QTY</externalDeveloperName>
    <label>Massima quantità VAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>