force-app/main/default/objects/SiebelRds__x/fields/X_VAS_PREAV_RIN__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_PREAV_RIN__c</fullName>
    <description>X_VAS_PREAV_RIN</description>
    <externalDeveloperName>X_VAS_PREAV_RIN</externalDeveloperName>
    <label>Preavviso per Rifiuto Offerta (gg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>