force-app/main/default/objects/SiebelRds__x/fields/X_VAS_PREZZO_TERZI__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_PREZZO_TERZI__c</fullName>
    <description>X_VAS_PREZZO_TERZI</description>
    <externalDeveloperName>X_VAS_PREZZO_TERZI</externalDeveloperName>
    <label>Prezzo terzi</label>
    <length>1</length>
    <type>Text</type>
</CustomField>