force-app/main/default/objects/SiebelRds__x/fields/X_VAS_SCONTO_EUR_ID__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_SCONTO_EUR_ID__c</fullName>
    <description>X_VAS_SCONTO_EUR_ID</description>
    <externalDeveloperName>X_VAS_SCONTO_EUR_ID</externalDeveloperName>
    <label>ID Sconto euro VAS</label>
    <length>15</length>
    <type>Text</type>
</CustomField>