force-app/main/default/objects/SiebelRds__x/fields/X_VAS_SCONTO_PERC_ID__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_SCONTO_PERC_ID__c</fullName>
    <description>X_VAS_SCONTO_PERC_ID</description>
    <externalDeveloperName>X_VAS_SCONTO_PERC_ID</externalDeveloperName>
    <label>ID Percentuale sconto VAS</label>
    <length>15</length>
    <type>Text</type>
</CustomField>