force-app/main/default/objects/SiebelRds__x/fields/X_VAS_TELEFONO__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_TELEFONO__c</fullName>
    <description>X_VAS_TELEFONO</description>
    <externalDeveloperName>X_VAS_TELEFONO</externalDeveloperName>
    <label>Telefono VAS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>