force-app/main/default/objects/SiebelRds__x/fields/X_VERSIONE_VAS__c.field-meta.xml
<CustomField>
    <fullName>X_VERSIONE_VAS__c</fullName>
    <description>X_VERSIONE_VAS</description>
    <externalDeveloperName>X_VERSIONE_VAS</externalDeveloperName>
    <label>Versione VAS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>