force-app/main/default/objects/SiebelRds__x/fields/X_WORK_CENTER_DES__c.field-meta.xml
<CustomField>
    <fullName>X_WORK_CENTER_DES__c</fullName>
    <description>X_WORK_CENTER_DES</description>
    <externalDeveloperName>X_WORK_CENTER_DES</externalDeveloperName>
    <label>Descrizione Centro Lavoro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>